# urban-independence

./: .env.example  .gitignore  CLAUDE.md  HONESTY.md  PROJECT.md  README.md  app.py  demo_cli.py  main.py  prompts.py  pyproject.toml  requirements.txt  state.py  telegram_bot.py  tools.py
agent/: __init__.py  config.py  orchestrator.py  persistence.py  prompts.py  schemas.py  tools.py
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
apps/api/app/: auth.py  caregiver_tools.py  companion.py  config.py  deps.py  diagnostics.py  hk_tools.py  identity.py  main.py  memory.py  models.py  persistence.py  persona.py  safety.py  supabase_client.py  telegram_tools.py
apps/api/app/routes/: chat.py  conversations.py  diagnostics.py  identity.py  reports.py  telegram.py  voice.py
apps/api/app/sources/: __init__.py  aqhi.py  calendar.py  mtr.py  news.py  telegram.py  traffic.py  weather.py  web.py
apps/api/scripts/: cli_chat.py  smoke_hk_sources.py
apps/api/tests/: conftest.py  test_app.py  test_auth.py  test_companion.py  test_diagnostics.py  test_hk_tools.py  test_mock_workflow.py  test_safety.py  test_telegram.py  test_voice.py  test_voice_identity.py
data/: advisories.json  calendar.json  events.json  profile.json
deploy/: .env.example  Caddyfile  README.md  compose.yml
docs/: ARCHITECTURE.md
quickdiagnosis/: README.md  features.py  pyproject.toml  quickdiagnosis.py  train.py
scripts/: seed_mock_data.py
supabase/: config.toml
tests/: test_agentic_workflow.py  test_live_tools.py
tools/: __init__.py  cognition.py  registry.py  (+4 more)
(+70 files in other folders)
