[project]
name = "quickdiagnosis"
version = "0.1.0"
description = "Random forest audio classifier for cognition screening (ADReSS-style)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "joblib>=1.3",
    "soundfile>=0.12",
    "gdown>=6.1.0",
]
